-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
[11564.738102] LustreError: 28186:0:(niobuf.c:391:ptlrpc_register_bulk()) lustre-OST0000-osc-ffff88009ce4f800: LNetMEAttach failed x1586857485824513/1: rc = -12
[11564.738229] LustreError: 28186:0:(niobuf.c:363:ptlrpc_register_bulk()) ASSERTION( !(desc->bd_registered && req->rq_send_state != LUSTRE_IMP_REPLAY) || mbits != desc->bd_last_mbits ) failed: registered: 1 rq_mbits: 1586857485824512 bd_last_mbits: 1586857485824512